app/assets/css/index.scss
@use "./onyx.scss";

.app {
  &__h1 {
    font-size: clamp(3.5rem, 9vw, 8rem);
    line-height: 1.05;
  }

  &__h2 {
    font-size: clamp(2rem, 4vw, 3rem);
    line-height: 1.25;
  }

  &__subtitle {
    font-family: var(--onyx-font-family-mono);
    text-transform: uppercase;
    letter-spacing: 0.25em;
  }
}

